...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoOfUnsplash" translatesAutoresizingMaskIntoConstraints="NO" id="YL0-Yn-cwQ">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iBJ-RK-XBA">
                                <rect key="frame" x="16" y="677.33333333333337" width="361" height="50.666666666666629"/>
                                <color key="backgroundColor" name="YPWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="iBJ-RK-XBA" secondAttribute="height" multiplier="343:48" id="knT-OK-dxT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                                                    <fontDescription key="fontDescription" name="SFPro-Regular" family="SF Pro" pointSize="13"/>
                                                                    <color key="textColor" name="YPWhite"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wiv-Ua-U6L">
                                                                    <rect key="frame" x="317" y="0.0" width="44" height="44"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="Like"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="width" secondItem="Wiv-Ua-U6L" secondAttribute="height" multiplier="1:1" id="VAl-aF-W9P"/>
                                                                        <constraint firstAttribute="height" constant="44" id="hhn-Ch-v9E"/>
                                                                    </constraints>
                                                                    <state key="normal" title="Button"/>
                                                                    <buttonConfiguration key="configuration" style="plain" image="No Active"/>
...
                                </constraints>
                                <viewLayoutGuide key="contentLayoutGuide" id="PSY-u7-V6Q"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="xIh-IW-4Fe"/>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RF4-As-Suj">
                                <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="7QX-2b-KAu"/>
                                    <constraint firstAttribute="width" secondItem="RF4-As-Suj" secondAttribute="height" multiplier="1:1" id="UQ3-fp-aY8"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
...
