...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        backwardButton.setTitle("", for: .normal)
        presenter?.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: []
        ) { [weak self] _, _ in
            guard let self else { return }
...
