...
    private func createExitButton() {
        let exitImage = UIImage.exitIcon
        let exitButton = UIButton.systemButton(with: exitImage, target: self, action: #selector(didTapExitButton))
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(exitButton)
        exitButton.tintColor = UIColor.ypRed
        exitButton.accessibilityIdentifier = "Exit"
        
        NSLayoutConstraint.activate([
            exitButton.widthAnchor.constraint(equalToConstant: 44),
            exitButton.heightAnchor.constraint(equalToConstant: 44),
            exitButton.centerYAnchor.constraint(equalTo: profileImageView.centerYAnchor),
            exitButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -14)
...
